@@ -21,6 +21,7 @@ Portability
 
 Design
 - Iterator interface for updown nodes
+- cerebro.conf updown_flags.
 
 Later Design
 - move listener hash into status hash 
