@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.11 2005-05-09 04:52:22 achu Exp $
+## $Id: Makefile.am,v 1.12 2005-05-10 17:51:55 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -23,7 +23,8 @@ man3_MANS  = cerebro_handle_create.3 \
 	     cerebro_updown_is_node_up.3 \
 	     cerebro_updown_is_node_down.3 \
 	     cerebro_updown_up_count.3 \
-	     cerebro_updown_down_count.3
+	     cerebro_updown_down_count.3 \
+	     cerebro_module.3
 
 man5_MANS  = cerebro.conf.5
  
@@ -48,5 +49,6 @@ EXTRA_DIST = cerebro.1 \
 	     cerebro_updown_is_node_down.3 \
 	     cerebro_updown_up_count.3 \
 	     cerebro_updown_down_count.3 \
+	     cerebro_module.3 \
 	     cerebro.conf.5 \
 	     cerebrod.8
