@@ -1,10 +1,16 @@
+2005-05-10  Albert Chu  <chu11@llnl.gov>
+
+	* More manpage cleanup/fixes.
+
+	* Small design cleanup/changes.
+	
 2005-05-09  Albert Chu  <chu11@llnl.gov>
 
 	* Hide functions that shouldn't be exported.
 
 	* New CEREBRO_DEBUG definition.  Rework code to use instead of
 	NDEBUG.
-	
+
 2005-05-08  Albert Chu  <chu11@llnl.gov>
 
 	* More manpage additions.
